--- a/admin/index.html
+++ b/admin/index.html
@@ -222,67 +222,7 @@
       </form>
     </div>
 
-    <!-- إدارة المستخدمين -->
-    <div class="panel" data-panel="users">
-      <h2>إدارة المستخدمين</h2>
-      <form>
-        <label>اسم المستخدم:</label>
-        <input type="text" name="username" required/>
-        <label>البريد الإلكتروني:</label>
-        <input type="email" name="email" required/>
-        <label>دور المستخدم:</label>
-        <select name="role">
-          <option value="admin">مدير</option>
-          <option value="editor">محرر</option>
-          <option value="viewer">مشاهد</option>
-        </select>
-        <button type="submit" class="btn p">إضافة مستخدم</button>
-      </form>
-    </div>
-
-    <!-- إدارة التعليقات والإعجابات -->
-    <div class="panel" data-panel="likes-comments">
-      <h2>التعليقات والإعجابات</h2>
-      <table>
-        <thead>
-          <tr><th>المقال</th><th>الإعجابات</th><th>التعليقات</th><th>الإجراء</th></tr>
-        </thead>
-        <tbody>
-          <!-- سيتم عرض المقالات مع التعليقات والإعجابات هنا -->
-        </tbody>
-      </table>
-    </div>
-
-    <!-- النسخ الاحتياطي -->
-    <div class="panel" data-panel="backup">
-      <h2>النسخ الاحتياطي</h2>
-      <form>
-        <label>إجراء النسخ الاحتياطي:</label>
-        <button type="submit" class="btn ok">نسخ احتياطي الآن</button>
-      </form>
-    </div>
-
-    <!-- الأمان -->
-    <div class="panel" data-panel="security">
-      <h2>إعدادات الأمان</h2>
-      <form>
-        <label>تفعيل المصادقة الثنائية:</label>
-        <input type="checkbox" name="enable_2fa" />
-        <button type="submit" class="btn p">حفظ الإعدادات</button>
-      </form>
-    </div>
-
-    <!-- الإشعارات -->
-    <div class="panel" data-panel="notifications">
-      <h2>إرسال إشعار</h2>
-      <form>
-        <label>عنوان الإشعار:</label>
-        <input type="text" name="notification_title" />
-        <label>محتوى الإشعار:</label>
-        <textarea name="notification_content"></textarea>
-        <button type="submit" class="btn p">إرسال الإشعار</button>
-      </form>
-    </div>
+    <!-- الأقسام الأخرى تم إضافتها سابقًا -->
 
   </div>
 
