--- a/admin/index.html
+++ b/admin/index.html
@@ -211,10 +211,10 @@
     <div class="panel" data-panel="settings">
       <h2>الإعدادات</h2>
       <form>
-        <label>الشعار:</label>
-        <input type="file" name="logo" />
-        <label>اللغة:</label>
-        <select name="language">
+        <label for="logo">الشعار:</label>
+        <input type="file" id="logo" name="logo" />
+        <label for="language">اللغة:</label>
+        <select name="language" id="language">
           <option value="ar">العربية</option>
           <option value="en">English</option>
         </select>
@@ -222,7 +222,67 @@
       </form>
     </div>
 
-    <!-- الأقسام الأخرى تم إضافتها سابقًا -->
+    <!-- إدارة المستخدمين -->
+    <div class="panel" data-panel="users">
+      <h2>إدارة المستخدمين</h2>
+      <form>
+        <label for="username">اسم المستخدم:</label>
+        <input type="text" id="username" name="username" required />
+        <label for="email">البريد الإلكتروني:</label>
+        <input type="email" id="email" name="email" required />
+        <label for="role">دور المستخدم:</label>
+        <select name="role" id="role">
+          <option value="admin">مدير</option>
+          <option value="editor">محرر</option>
+          <option value="viewer">مشاهد</option>
+        </select>
+        <button type="submit" class="btn p">إضافة مستخدم</button>
+      </form>
+    </div>
+
+    <!-- إدارة التعليقات والإعجابات -->
+    <div class="panel" data-panel="likes-comments">
+      <h2>التعليقات والإعجابات</h2>
+      <table>
+        <thead>
+          <tr><th>المقال</th><th>الإعجابات</th><th>التعليقات</th><th>الإجراء</th></tr>
+        </thead>
+        <tbody>
+          <!-- سيتم عرض المقالات مع التعليقات والإعجابات هنا -->
+        </tbody>
+      </table>
+    </div>
+
+    <!-- النسخ الاحتياطي -->
+    <div class="panel" data-panel="backup">
+      <h2>النسخ الاحتياطي</h2>
+      <form>
+        <label for="backup_version">إجراء النسخ الاحتياطي:</label>
+        <button type="submit" class="btn ok">نسخ احتياطي الآن</button>
+      </form>
+    </div>
+
+    <!-- الأمان -->
+    <div class="panel" data-panel="security">
+      <h2>إعدادات الأمان</h2>
+      <form>
+        <label for="enable_2fa">تفعيل المصادقة الثنائية:</label>
+        <input type="checkbox" id="enable_2fa" name="enable_2fa" />
+        <button type="submit" class="btn p">حفظ الإعدادات</button>
+      </form>
+    </div>
+
+    <!-- الإشعارات -->
+    <div class="panel" data-panel="notifications">
+      <h2>إرسال إشعار</h2>
+      <form>
+        <label for="notification_title">عنوان الإشعار:</label>
+        <input type="text" id="notification_title" name="notification_title" />
+        <label for="notification_content">محتوى الإشعار:</label>
+        <textarea id="notification_content" name="notification_content"></textarea>
+        <button type="submit" class="btn p">إرسال الإشعار</button>
+      </form>
+    </div>
 
   </div>
 
